[gd_scene load_steps=3 format=3 uid="uid://18crkb1kbthw"]

[ext_resource type="Script" uid="uid://clcpko2o53kpg" path="res://editor/controls/template_library_dialog/template_library_dialog.gd" id="1_x5o1u"]
[ext_resource type="PackedScene" uid="uid://cfdfx7iow623o" path="res://editor/controls/import_file_dialog/import_settings.tscn" id="2_6eeyu"]

[node name="TemplateLibraryDialog" type="ConfirmationDialog"]
title = "Import from Library"
initial_position = 2
size = Vector2i(830, 560)
visible = true
min_size = Vector2i(400, 300)
ok_button_text = "Load"
script = ExtResource("1_x5o1u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = 820.0
offset_bottom = 513.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="ItemListLibrary" type="ItemList" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
max_text_lines = 2
max_columns = 0
same_column_width = true
icon_mode = 0

[node name="ImportSettings" parent="VBoxContainer" instance=ExtResource("2_6eeyu")]
unique_name_in_owner = true
layout_mode = 2

[node name="CheckAutogenerateBonds" parent="VBoxContainer/ImportSettings/PanelContainer/VBoxContainer/HBoxContainer" index="0"]
button_pressed = false

[editable path="VBoxContainer/ImportSettings"]
